# bindfs_jelly

./: .gitignore  CMakeLists.txt  README.md  configure.ac  create_db.py
pytests/: requirements.txt  test_sqlite_extension.py
sqlite_ext/: .gitignore  supercollate.c
src/: Makefile.am  bindfs.c  bindfs.h  bindfs_x.cpp  config.cmake.in
